fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 
 .main-content {
   background-color: #1a1d7a;
-  padding: 0 30px;
+  padding: 0 30px 30px 30px;
 }
 
 /* #region.cards */
